@@ -1,5 +1,0 @@
-$:.push(File.join(File.dirname(__FILE__), %w[.. .. rspec]))  
-  
-Autotest.add_discovery do  
-  "rspec"  
-end
