@@ -1,4 +1,0 @@
-# desc "Explaining what the task does"
-# task :acts_as_taggable_on do
-#   # Task goes here
-# end
