@@ -1,3 +1,8 @@
+== 2008-06-09
+ 
+ * Added support for Single Table Inheritance
+ * Adding gemspec and rails/init.rb for gemified plugin
+ 
 == 2007-12-12
 
  * Added ability to use dynamic tag contexts
